# python-ber-tlv

./: LICENSE  README.md  setup.cfg
ber_tlv/: tlv.py
tests/: test.py
