[metadata]
name = ber-tlv-atoumilovich
version = 0.0.1
author = Andrey Toumilovich
author_email = andrey.toumilovich@gmail.com
description = A EMV BER-TLV encoding/decoding package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/todo
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4

[options.packages.find]
exclude =
    tests
